refAccounter, json writer automaton